@@ -25,8 +25,7 @@
 		     (nconc semi-modules-not-to-compile i-modules))
 	       )
 	     )))
-	'((bbdb		mime-bbdb)
-	  (w3		mime-w3)
+	'((w3		mime-w3)
 	  (vcard	mime-vcard)
 	  (shr		mime-shr)
 	  ))
