@@ -1,3 +1,11 @@
+2020-05-30  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>
+
+	* mime-bbdb.el: Removed.
+
+	* SEMI-ELS: Likewise.
+
+	* signature.el: Likewise.
+
 2020-05-23  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>
 
 	Use lexical binding.
